# databricks-lakehouse-intelligence

./: .gitignore  README.md  databricks-lakehouse-intelligence-deck.html  pyproject.toml
data/: sample_financials.csv  sample_mining_companies.csv  sample_production.csv
notebooks/: 00_setup.py  01_bronze_ingest.py  02_silver_transform.py  03_gold_aggregate.py  04_mlflow_experiments.py  05_dashboard_sql.py
src/lakehouse/: __init__.py  config.py  models.py  signal_engine.py  sql_queries.py
