[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "databricks-lakehouse-intelligence"
version = "0.1.0"
description = "Medallion Architecture + Unity Catalog + MLflow for Mining Intelligence Analytics on Databricks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Shyam Desigan", email = "sam@cubiczan.com"},
]
keywords = ["databricks", "lakehouse", "medallion", "unity-catalog", "mlflow", "mining", "analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "databricks-sdk>=0.28.0",
    "mlflow>=2.12.0",
    "pandas>=2.2.0",
    "pydantic>=2.0",
    "cubiczan-resilience @ git+https://github.com/icohangar-ops/cubiczan-resilience.git#subdirectory=python",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "pytest>=8.0",
    "mypy>=1.9",
]
spark = [
    "pyspark>=3.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
